fixes: Merged  latest develop changes